<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cloud"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:layout_width="69.5dp"
        android:layout_height="19.7dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/cloud"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:layout_width="69.5dp"
        android:layout_height="19.7dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/cloud"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="47dp"
        android:layout_height="13dp"
        android:background="@drawable/cloud"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/logo_background"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/transparent_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/logo_background"
        app:layout_constraintEnd_toEndOf="@+id/logo_background"
        app:layout_constraintTop_toTopOf="@+id/logo_background"
        app:layout_constraintBottom_toBottomOf="@+id/logo_background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_background"
        android:text="@string/registration_title" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:lineSpacingExtra="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="15sp"
        android:text="@string/login_info" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/e_mail_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_box"
        android:layout_width="0dp"
        android:layout_height="38dp"
        style="@style/LoginTextInputLayoutStyle"
        app:hintEnabled="false"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:hint="@string/email_hint"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/password_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_box"
        android:layout_width="0dp"
        android:layout_height="38dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:paddingTop="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_repeat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/repeat_password_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_repeat_box"
        android:layout_width="0dp"
        android:layout_height="38dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_repeat_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:paddingTop="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/register_button"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/termsAndPrivacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColorLink="@color/blue"
        android:text="@string/terms_and_privacy"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>